--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
-    <!--Linked two stylesheets; bootstrap and css-->
+    <!--Linked two stylesheets bootstrap and css-->
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
@@ -24,7 +24,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item active">
-                    <a class="nav-link" href="index.html">Home</a> <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="index.html">Home</a> <span class="sr-only">(current)</span>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="contact.html">Contact</a>
@@ -38,12 +38,12 @@
     <div id="wrapper">
         <div class="container">
             <div class="row">
-                <div class="col-7">
+                <div class="col-7 bg-secondary">
                     <header>About Me</header>
 
                     <div class="row">
                         <div class="col-md-4">
-                            <img src="Assets/IMG_2354 copy.JPG" class="img-fluid" alt="Responsive image">
+                            <img src="Assets/Images/IMG_2354copy.JPG" class="img-fluid" alt="Responsive image">
 
                         </div>
                         <div class="col-md-8">
@@ -65,10 +65,9 @@
 
     <footer class="footer mt-auto py-3">
         <div class="container">
-            <span class="text-muted">Place sticky footer content here.</span>
+            <span class="text-muted">Created By Thokozile Soko.</span>
         </div>
     </footer>
-    </div>
 </body>
 
 </html>
