--- a/portfolio.html
+++ b/portfolio.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portfolio</title>
-  <!--Linked two stylesheets; bootstrap and css-->
+  <!--Linked two stylesheets bootstrap and css-->
   <link rel="stylesheet" type="text/css" href="style.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
     integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
@@ -23,7 +23,7 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item active">
-          <a class="nav-link" href="index.html">Home</a> <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="index.html">Home</a> <span class="sr-only">(current)</span>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="contact.html">Contact</a>
@@ -34,27 +34,23 @@
     </div>
   </nav>
   <!--Portfolio Layout: multiple images-->
-  <h1 id=portfolio>Portfolio</h1>
   <div class="container">
+    <h1 id=portfolio>Portfolio</h1>
     <div class="row">
-      <div class="col-8">
+      <div class="col-6 bg-secondary">
         <div class="text-center">
-          <img src="https://via.placeholder.com/300" alt="An image placeholder" class="img-thumbnail">
-          <img src="https://via.placeholder.com/300" alt="An image placeholder" class="img-thumbnail">
-          <img src="https://via.placeholder.com/300" alt="An image placeholder" class="img-thumbnail">
-          <img src="https://via.placeholder.com/300" alt="An image placeholder" class="img-thumbnail">
-          <img src="https://via.placeholder.com/300" alt="An image placeholder" class="img-thumbnail">
-          <img src="https://via.placeholder.com/300" alt="An image placeholder" class="img-thumbnail">  
-          <footer class="footer mt-auto py-3">
-            <div class="container">
-              <span class="text-muted">Place sticky footer content here.</span>
-            </div>
-          </footer>
-  
+          <img src="Assets/Images/globecopy.jpg" alt="An image of a globe" class="img-thumbnail">
+          <img src="Assets/Images/pexels-daria-obymaha-1684149copy.jpg" alt="An image of a table" class="img-thumbnail">
+          <img src="Assets/Images/calendarcopy.jpg" alt="An image of a calendar" class="img-thumbnail">
         </div>  
       </div>
     </div>
   </div>
+  <footer class="footer mt-auto py-3">
+    <div class="container">
+      <span class="text-muted">Created By Thokozile Soko.</span>
+    </div>
+  </footer>
 </body>
 
 </html>
